--- a/templete/page.html
+++ b/templete/page.html
@@ -69,7 +69,7 @@
   <!--
     Animations:
       Landing Image/Content, Footer:
-        xyz="fade big"
+        xyz="fade big delay-1"
       Headers:
         xyz="fade small stagger ease-out-back"
       Content:
