test commit with smooth scrolling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </button>
           <a href="./" class="rud-width-fluid btn btn-link"><span class="rud-nav-item-color rud-text-logo font-size-24">&lt;/RudRecciah&gt;</span>
           </a>
-          <a href="./contact/">
+          <a href="#contact-title">
             <button class="btn btn-action btn-link" type="button">
               <i class="fas fa-paper-plane rud-nav-item-color" aria-hidden="true"></i>
             </button>
@@ -103,10 +103,12 @@
               Hey
             </h1>
           </div>
-          <div xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
-            <p id="about" class="text-center">
-              I'm a developer who does things.
-            </p>
+          <div class="w-1000 m-auto">
+            <div xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
+              <p id="about" class="text-center">
+                I'm a pink parrot with development skills. I code in Java, HTML, JS, and CSS. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <strong>GAMER</strong> spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the server Endcraft and it's forks with <a href="https://eerie.ml/">EerieDEV</a>. Currently, I'm learning how to build Discord bots in JS, and may release a few in the future.
+              </p>
+            </div>
           </div>
           <hr>
           <div xyz="fade small stagger ease-out-back">
