--- a/templete/page.html
+++ b/templete/page.html
@@ -19,6 +19,9 @@
       .page-wrapper {
         overflow-x: hidden;
       }
+      .w-1000 {
+        width: 1000px;
+      }
     </style>
   </head>
   <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
