4th wall break on bug page

--- a/bugs/index.html
+++ b/bugs/index.html
@@ -22,11 +22,12 @@
       Notice a bug with one of my projects or think something might be an error? Report it here. Many of my projects use dependencies that I have no control over making bugs more likely to appear over time.
     </p>
     <input type="text" id="bug" onkeyup="sendBug(event)" placeholder="Press enter to submit." title="Report A Bug">
-    <br>
-    <br>
+    <br><br>
     <hr>
     <br>
     <a href="../">Back</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p>haha brutalist bug page go brrrrrrrr</p>
     <script>
       function sendBug(e) {
         var key = e.keyCode
@@ -50,6 +51,5 @@
         }
       }
     </script>
-    <!-- haha brutalist bug page go brr -->
   </body>
 </html>
