--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -4,7 +4,7 @@
     <!-- Meta tags -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+    <meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="keywords" content="keywords here" />
     <meta name="description" content="description here" />
     <meta name="author" content="RudRecciah" />
@@ -19,50 +19,26 @@
     <div class="page-wrapper" data-sidebar-type="overlayed-all">
       <div class="content-wrapper">
         <div class="container-fluid">
-          <img src="nmlf.png" class="img-fluid" alt="image did a not exist sorry :/">
+          <div class="content">
+            <div class="row h-100vh">
+              <div class="col-6 h-full">
+                <img class="img-fluid align-middle d-inline" src="logo.png" alt="err">
+              </div>
+              <div class="col-6 h-full">
+
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="content">
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>Welcome</b>
-          </h1>
-          <p class="text-center">
-            Welcome to EndCraft!
-          </p>
-          <div class="rud-spacer-sm"></div>
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>About</b>
-          </h1>
-          <p class="text-center">
-            EndCraft is a Minecraft server I've owned for about <span id="year">#</span> years. I've been working on and off developing and running the server over that time, which really doesn't yeild results. So, I decided to create this website; a place to leave public files and archives of EndCraft to help people develop other servers.
-          </p>
-          <div class="rud-spacer-sm"></div>
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>Past Development</b>
-          </h1>
-          <p class="text-center">
-            EndCraft was originally developed for MC:PE in 2013 using PMMP. Moving to MC:BE in 2018 and Java Edition in June 2019, MC:BE builds were vanilla (it's suprisingly decent) and Java Edition builds used Spigot. In April 2020, MC:BE moved back to PMMP and Java Edition to Paper. MC:PE and BE builds used the latest stable versions of the game, while Java Edition used a mix between 1.15.x and 1.8.x. Custom plugins for Java Edition used the 1.13 Spigot API in both Spigot and Paper variants. I've left the team developing MC:BE builds, and at the time of writing they are maintaining heavily modified versions of EndCraft's MC:BE builds. Public versions of EndCraft's Java Edition builds are no longer maintained as of writing, following the trend of previous years. Some parts of those builds are available <a href="../osea/">here</a>.
-          </p>
-          <div class="rud-spacer-sm"></div>
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>PMMP Archive</b>
-          </h1>
-          <p class="text-center">
-            You can find information about EndCraft's PMMP builds during my time developing them <a href="./archive/">here</a>. As the site is an archive, links may become broken over time and new information will not be added. You will not be able to find any of the builds themselves there though; they are all closed source and will most likely never be released.
-          </p>
-          <div class="rud-spacer-sm"></div>
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>Current and Future Development</b>
-          </h1>
-          <p class="text-center">
-            EndCraft, while not currently being developed by me, has parts of itself implemented in other servers (most notably the modified EndCraft PMMP builds from above). I currently don't have any plans to develop EndCraft in the future, but if you want to get in touch about potentially rebooting it in the future don't hesitate to contact me. I'm open to potentially going into development with a new team or supplying someone I can trust with closed source parts of EndCraft to develop or maintain them.
-          </p>
-          <div class="rud-spacer-sm"></div>
-          <h1 class="content-title text-center font-size-24 text-pink">
-            <b>Contact</b>
-          </h1>
-          <p class="text-center">
-            You can contact me on Discord <span class="text-monospace">@RudRecciah#5681 (id=246080207704817664)</span>.
-          </p>
+        <!-- <div class="container-fluid">
+          <div class="content">
+            <div class="row h-100vh">
+              <div class="col">
+
+              </div>
+            </div>
+          </div>
+        </div> -->
           <!-- CONTENT TEMPLETE 
             <h1 class="content-title text-center font-size-24 text-pink">
               <b>Title</b>
