quick spacing fix on ec site

--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -26,6 +26,7 @@
                 <div class="w-full">
                   <div class="row">
                     <div class="col text-center">
+                      <div class="rud-spacer-sm-mdh"></div>
                       <img class="img-fluid d-inline" src="logo.png" alt="err">
                     </div>
                   </div>
