quick outline fix on buttons

--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -38,10 +38,10 @@
                   <div class="rud-spacer-sm-lmdh"></div>
                   <div class="row">
                     <div class="col-6 text-center">
-                      <a class="btn btn-rounded text-white text-center" href="./archive/" >PMMP Archive</a>
+                      <a class="btn btn-rounded text-white text-center no-outline" href="./archive/" >PMMP Archive</a>
                     </div>
                     <div class="col-6 text-center">
-                      <a class="btn btn-rounded text-white text-center" href="../osea/">Java Archive</a>
+                      <a class="btn btn-rounded text-white text-center no-outline" href="../osea/">Java Archive</a>
                     </div>
                   </div>
                 </div>
