--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -13,10 +13,11 @@
     <title>EndCraft</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.4.0/dist/animxyz.min.css">
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars light-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
-    <div class="page-wrapper with-navbar-fixed-bottom" data-sidebar-type="overlayed-all">
+    <div id="wrapper" class="page-wrapper with-navbar-fixed-bottom" data-sidebar-type="overlayed-all">
       <div class="content-wrapper overflow-y-lg-hidden">
         <div class="ec-bg"></div>
         <div class="container-fluid">
@@ -25,9 +26,9 @@
               <div class="col-lg-6 col-12 h-lg-full vert-align-middle overflow-y-lg-hidden">
                 <div class="w-full">
                   <div class="row">
-                    <div class="col text-center">
+                    <div class="col text-center overflow-x-hidden overflow-y-lg-hidden" xyz="fade small stagger ease-out-back">
                       <div class="rud-spacer-sm-mdh"></div>
-                      <img class="img-fluid d-inline" src="logo.png" alt="err">
+                      <img id="logo" data-animated class="img-fluid d-inline" src="logo.png" alt="err">
                     </div>
                   </div>
                   <div class="rud-spacer-sm-lmdh"></div>
@@ -37,32 +38,40 @@
                   <div class="rud-spacer-sm-lmdh"></div>
                   <div class="rud-spacer-sm-lmdh"></div>
                   <div class="row">
-                    <div class="col-6 text-center">
-                      <a class="btn btn-rounded text-white text-center no-outline" href="./archive/" >PMMP Archive</a>
+                    <div class="col-6 text-center" xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
+                      <a id="pmmp" data-animated class="btn btn-rounded text-white text-center no-outline" href="./archive/" >PMMP Archive</a>
                     </div>
-                    <div class="col-6 text-center">
-                      <a class="btn btn-rounded text-white text-center no-outline" href="../osea/">Java Archive</a>
+                    <div class="col-6 text-center" xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
+                      <a id="java" data-animated class="btn btn-rounded text-white text-center no-outline" href="../osea/">Java Archive</a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 col-12 h-lg-full vert-align-middle overflow-y-lg-hidden">
+              <div class="col-lg-6 col-12 h-lg-full vert-align-middle overflow-y-lg-hidden overflow-x-hidden">
                 <div class="w-full">
                   <div class="rud-spacer-sm-mdh"></div>
                   <div class="rud-spacer-sm-mdh"></div>
-                  <h1 class="content-title text-center font-size-24 text-pink">
-                    What is EndCraft?
-                  </h1>
-                  <p class="text-center text-white m-auto">
-                    EndCraft is a Minecraft server I've owned with some friends for about <span id="year">#</span> years. I've been working on and off developing and running the server over that time, which really doesn't yeild results. So, I decided to create this website; a place to leave public files and archives of EndCraft to help people with more drive than me develop other servers. Check out the PMMP Archive for MC:BE and Helios information and the Java Archive for open-source files for Spigot servers.
-                  </p>
+                  <div xyz="fade small stagger ease-out-back">
+                    <h1 id="whatis" data-animated class="content-title text-center font-size-24 text-pink">
+                      What is EndCraft?
+                    </h1>
+                  </div>
+                  <div xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
+                    <p id="itis" data-animated class="text-center text-white m-auto">
+                      EndCraft is a Minecraft server I've owned with some friends for about <span id="year">#</span> years. I've been working on and off developing and running the server over that time, which really doesn't yeild results. So, I decided to create this website; a place to leave public files and archives of EndCraft to help people with more drive than me develop other servers. Check out the PMMP Archive for MC:BE and Helios information and the Java Archive for open-source files for Spigot servers.
+                    </p>
+                  </div>
                   <div class="rud-spacer-sm"></div>
-                  <h1 class="content-title text-center font-size-24 text-pink">
-                    Past Development
-                  </h1>
-                  <p class="text-center text-white m-auto">
-                    EndCraft was originally developed for MC:PE in 2013 using PMMP. The server moved to being vanilla-based in 2017, coming back to PMMP in 2019. EndCraft also was ported to Java in 2019 using Paper. In early August 2020 I shut down Java for the last time as of writing and left the team maintaining MC:BE. A name change and few months later MC:BE EndCraft, known as Helios Practice, <a href="https://eerie.ml/projects/index.html#helios">closed on Febuary 1st, 2021</a>.
-                  </p>
+                  <div xyz="fade small stagger ease-out-back">
+                    <h1 id="historyoftheentireworld" data-animated class="content-title text-center font-size-24 text-pink">
+                      Past Development
+                    </h1>
+                  </div>
+                  <div xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
+                    <p id="iguess" data-animated class="text-center text-white m-auto">
+                      EndCraft was originally developed for MC:PE in 2013 using PMMP. The server moved to being vanilla-based in 2017, coming back to PMMP in 2019. EndCraft also was ported to Java in 2019 using Paper. In early August 2020 I shut down Java for the last time as of writing and left the team maintaining MC:BE. A name change and few months later MC:BE EndCraft, known as Helios Practice, <a href="https://eerie.ml/projects/index.html#helios">closed on Febuary 1st, 2021</a>.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -93,6 +102,26 @@
       var timeYear = timeSplit[3];
       var timeWasted = timeYear - 2013;
       document.getElementById("year").innerHTML = timeWasted;
+    </script>
+    <script>
+      window.onload = animate();
+
+      document.getElementById("wrapper").addEventListener("scroll", function() {
+        animate();
+      });
+
+      function animate() {
+        var elements = document.querySelectorAll("[data-animated]");
+        elements.forEach(element => {
+          var actualElement = document.getElementById(element.getAttribute("id"));
+          var distance = actualElement.getBoundingClientRect();
+          if(distance.top <= (window.innerHeight || document.documentElement.clientHeight)) {
+            if(!(document.getElementById(element.getAttribute("id")).classList.contains("xyz-in"))) {
+              document.getElementById(element.getAttribute("id")).classList.add("xyz-in");
+            }
+          }
+        });
+      }
     </script>
   </body>
 </html>
